## Process this file with automake to generate Makefile.in

# Copyright 1996, 1998, 1999, 2000, 2001, 2002, 2003 Free Software
# Foundation, Inc.
#
# This file is part of the GNU MP Library.
#
# The GNU MP Library is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at your
# option) any later version.
#
# The GNU MP Library is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
# License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
# MA 02110-1301, USA.


AM_CPPFLAGS = -D__GMP_WITHIN_GMP -I$(top_srcdir)

EXTRA_DIST = 

noinst_LTLIBRARIES = libfft.la
libfft_la_SOURCES = adjust.c adjust_sqrt2.c butterfly_lshB.c butterfly_rshB.c combine_bits.c div_2expmod_2expp1.c fermat_to_mpz.c fft_mfa_trunc_sqrt2.c fft_mfa_trunc_sqrt2_inner.c fft_negacyclic.c fft_radix2.c fft_trunc.c fft_trunc_sqrt2.c ifft_mfa_trunc_sqrt2.c ifft_negacyclic.c ifft_radix2.c ifft_trunc.c ifft_trunc_sqrt2.c mul_2expmod_2expp1.c mul_fft_main.c mul_mfa_trunc_sqrt2.c mul_trunc_sqrt2.c mulmod_2expp1.c normmod_2expp1.c revbin.c split_bits.c
